bug: carousel on mobile view does not fit.
fix: Do not include when in mobile

--- a/src/pages/Menu/Menu.module.css
+++ b/src/pages/Menu/Menu.module.css
@@ -5,6 +5,7 @@
 	position: relative;
 	align-items: center;
 	gap: 8px;
+	top: 10vh;
 	margin-top: 64px;
 }
 
@@ -15,8 +16,32 @@
 	margin-top: 1em;
 }
 
-.carousel {
+.carousel-div {
+	display: none;
 	height: 300px;
 	width: 100%;
 	margin-top: 10vh;
+}
+
+.carousel {
+	display: none;
+}
+
+@media (min-width: 769px) {
+	.carousel-div {
+		display: block;
+		height: 300px;
+		width: 100%;
+		margin-top: 10vh;
+	}
+
+	.menu-section {
+		display: flex;
+		height: 100%;
+		flex-direction: row;
+		position: relative;
+		align-items: center;
+		gap: 8px;
+		margin-top: 64px;
+	}
 }
